css/main.css
/* All css styles go here */

@font-face {
    font-family: "ov-gothic";
    font-display: swap;
    font-style: normal;
    font-weight: 400 700;
    src: url("../fonts/ov-gothic.woff2");
}

@font-face {
    font-family: "merlo";
    font-display: swap;
    font-style: normal;
    font-weight: 400;
    /* src: url("../fonts/merlo.woff2"); */
    src:url(https://cdn.outdoorvoices.com/shopify/2.0.0/fonts/merlo.woff2) format("woff2")
}

@font-face {
  font-family: "merlo";
  font-display: swap;
  font-style: normal;
  font-weight: 700;
  /* src: url("../fonts/merlo.woff2"); */
  src:url(https://cdn.outdoorvoices.com/shopify/2.0.0/fonts/merlo.woff2) format("woff2")}

:root {
    --font-sans-serif: merlo, serif;
    --font-serif: ov-gothic, serif;
    --White: #ffffff;
    --Brand-Blue: #000f9f;
    --Brand-gray: rgb(32, 32, 32);
    --light-gray-text: #737373;
    --light-gray-background: #f9f9f9;
}

html {
    box-sizing: border-box;
  }
  *, *:before, *:after {
    box-sizing: inherit;
  }


/* Copy Styles */

/* .sidebar {
  margin: 0;
  padding: 0;
  width: 200px;
  background-color: #f1f1f1;
  position: fixed;
  height: 100%;
  overflow: auto;
} */

body { 
    -webkit-font-smoothing: antialiased;
    font-family: ov-gothic,HelveticaNeue-Bold,Helvetica Neue Bold,Helvetica Neue,arial,sans-serif;
    color: #444343;
    padding-left: 20px;
    padding-top: 20px;
    width: 100vw;
    overflow-x: hidden;
}

h1 {
    font-family: "merlo";
    font-size: 32px;
    letter-spacing: -2;
}

h2 {
    font-family: "merlo";
    font-size: 60px;
    letter-spacing: -2px;
    color: var(--Brand-gray);
    font-weight: 500;
}

h3 {
    font-family: "merlo";
    font-size: 36px;
    font-weight: 400;
    color: var(--Brand-gray);
    letter-spacing: -1.5px;
}

.h3__example {
  margin: 2px;
}

h4 {
    font-family: "merlo";
    font-size: 48px;
    font-weight: 400;
    color: var(--Brand-gray);
    letter-spacing: -1px;
}

.h4__example {
  margin: 2px;
}

h5 {
    font-family: "merlo";
    font-size: 24px;
    color: var(--Brand-gray);
}

h6 {
    font-family: "merlo";
    font-size: 20px;
    color: var(--Brand-gray);
    font-weight: 100;
    letter-spacing: -.5px;
    margin: 0;
}

.cover-section__body { 
    font-family: ov-gothic,HelveticaNeue-Bold,Helvetica Neue Bold,Helvetica Neue,arial,sans-serif;
    font-size: 20px;
    color: var(--Brand-gray);
    margin: 0;
    margin-top: 12px;
}

.carousel-section-card__body {
    font-family: ov-gothic,HelveticaNeue-Bold,Helvetica Neue Bold,Helvetica Neue,arial,sans-serif;
    font-size: 13px;
    color: var(--light-gray-text);
    margin: 0;
}

.img-example {
    border: 1px solid var(--light-gray-text);
    display: block;
}

.component img {
    max-width: initial;
}

/* Button Styles */

button {
    background-color: var(--Brand-gray);
    color: white;
    font-family: ov-gothic,HelveticaNeue-Bold,Helvetica Neue Bold,Helvetica Neue,arial,sans-serif;
    font-weight: 400;
    padding: 0px 36px;
    line-height: 48px;
    border: none;
    border-radius: 24px;
    text-align: center;
    text-decoration: none;
    display: inline-block;
    font-size: 16px;
  }

button:hover {
  background-color: var(--Brand-Blue);
}

.carousel-button_icon {
  background-color: var(--light-gray-background);
  color: var(--Brand-gray);
  text-decoration: none;
  border-radius: 0;
  padding: 0px 24px;
}

/* Logos */

.logo__small {
  max-width: 100px;
  align-items: center;
}

/* Main Nav */

.main-nav {
  display: flex;
  flex-direction: row;
  width: 100vw;
  justify-content: space-between;
  align-items: center;
  padding: 0 78px;
}

.header__nav {
  display: flex;
  flex-direction: row;
}

ul {
  list-style-type: none;
  color: var(--Deep-gray);
}

.example__ {
  max-width: 800px;
}

.header__nav-item {
  padding: 0 20px 0 0;
  font-size: 13px;
}

a {
  text-decoration: none;
  color: var(--Deep-gray);
}

.product__img-h5 {
        width: 406px;
        height: 542px;
        text-align:center;
        display:block;
        background-color: transparent;
        border: 1px solid transparent;
        margin-right: 10px;
        margin-bottom: 1px;
        float:left;
        align-items: center;
}

.component-code_h5_example {
  width: 406px;
}

.image-grid-card__title {
    margin: 20px;
}

.image-grid-card__image {
    width: 100%;
}

/* Cover Section */

.cover_section {
  width: 100vw;
  align-items: center;
  padding: 0 150px;
}

.cover_section-image {
  width: 100%;
}

.cover_section-content {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
}

.button-container {
  display: flex;
  align-items: center;
  justify-content: center;
}

.button-margin {
  margin-left: 24px;
}

.cover-section__title {
  margin: 0;
  margin-top: 4px;
}

/* Image Grid */

.image_grid_section {
  width: 100vw;
  align-items: center;
  padding: 0 72px;
  max-width: 1420px;
  margin: 0 auto;
}

.image_grid_section-content {
  width: 100%;
  display: flex;
  align-items: center;
  justify-content: space-between;
  gap: 16px;

}

.carousel-section__title {
  text-align: center;
}

/* Shop Blocks */

.shop_blocks_section {
  width: 100vw;
  align-items: center;
  padding: 0 150px;
  /* background-color: var(--light-gray-background); */
  padding: 0 72px;
  max-width: 1420px;
  margin: 0 auto;
}

.shop_blocks_section-content {
  width: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
  gap: 16px;
}

.shop_blocks_section_card1 {
  width: 100%;
  position: relative;
  text-align: center;
}

.shop_blocks_section_card2 {
  width: 100%;
  position: relative;
  text-align: center;
}

.shop-blocks__title {
  position: absolute;
  top: 30%;
  left: 30%;
  color: #ffffff;
}

.shop-blocks__image {
  width: 100%;
}

/* Footer */

.email-signup__inputs {
  display: flex;
  flex-direction: row;
}

.email-signup__button-container {
  display: flex;
  flex-direction: column;
  justify-content: flex-end;
}

.footer {
  display: flex;
  flex-direction: row;
  justify-content: space-around;
  padding-top: 84px;
  padding-bottom: 84px;

}

.footer-section {
  max-width: 500px;
  flex: 1 1;
  height: 100%;
}

.footer__body {
  color: var(--Brand-gray);
}

.footer__nav {
  display: flex;
  flex-direction: column;
  margin-bottom: 12px;
  padding-inline-start: 0;
}

.footer__nav-left {
  flex: 2 1;
}

.footer__nav-right {
  flex: 1 1;
}


.footer__nav-item {
  font-size: 13px;
  margin-bottom: 12px;
  padding: 0 12px 24px 12px;
}

.footer-section__links {
  display: flex;
  flex-direction: row;
}

.footer-section__socials {
  color: var(--Brand-gray);
  margin-bottom: 16px;
  padding-left: 12px;
}

.footer-section__copyright {
  padding-left: 12px;
}

.footer-social {
  margin-right: 36px;
  font-size: 20px;
}

.radio-input {
  appearance: none;
    background: #fff;
    border: 2px solid #202020;
    border-radius: 14px;
    cursor: pointer;
    height: 28px;
    margin: 0 10px 0 0;
    padding: 0;
    position: relative;
    width: 28px;
}

.radio-input::before {
  background: #202020;
    border-radius: 50%;
    content: "";
    display: block;
    height: 18px;
    left: 50%;
    position: absolute;
    top: 50%;
    -webkit-transform: translate3d(-50%,-50%,0) scale(.01);
    transform: translate3d(-50%,-50%,0) scale(.01);
    transition: -webkit-transform .2s ease-in-out;
    transition: transform .2s ease-in-out;
    transition: transform .2s ease-in-out,-webkit-transform .2s ease-in-out;
    width: 18px;
}

.radio-input:checked::before {
  -webkit-transform: translate3d(-50%,-50%,0) scale(1);
    transform: translate3d(-50%,-50%,0) scale(1);
}

.email-input-wrapper {
    display: flex;
    align-items: center;
    background: rgba(32,32,32,.07);
    border-radius: 4px;
    color: #202020;
    height: 48px;
    overflow: hidden;
    width: 100%;
}

.email-input-label {
  padding-left: 24px;
  padding-right: 12px;
  width: fit-content;
}

.email-input-input {
  background: transparent;
  width: 100%;
  height: 100%;
  border: none;
  padding: 0 4px;
}

 /* Carousel */

.carousel {
  width: 100%;
  /* overflow: scroll; */
  overflow-x: auto;
  position: relative;
}

.carousel-inner {
  padding-bottom: 10px;
  white-space: nowrap;
  position: relative;
  scroll-snap-type: x proximity;
  overflow-x: auto;

}

.carousel-example {
  height: 400px;
  width: 300px;
  background-color: red;
  margin: 0 1px;
  display: inline-block;
}

.carousel-product-card {
  display: inline-block;
}

.carousel-product-image {
  height: 400px;
  min-width: 300px;
  margin-bottom: 12px;
}

.carousel-product-caption {
  width: 95%;
}

.carousel-section-card__title {
  margin: 0 0 8px 0;
  letter-spacing: -.5px;
  line-height: 28px;
  font-weight: 700;
}

.carousel-button-left {
  left: 0;
  position: absolute;
  z-index: 1;
  top: 50%;
}

.carousel-button-right {
  right: 0;
  position: absolute;
  z-index: 1;
  top: 50%;
}

.container {
  width: 100%;
  max-width: 1420px;
  /* margin: auto; */
  /* padding: 0 72px; */
}

.carousel-product-image-hover {
  left: 0;
  opacity: 0;
  position: absolute;
  top: 0;
  transition: opacity .3s ease-in-out;
}

.carousel-product-image-wrapper {
  position: relative;
}

.carousel-product-image-wrapper:hover .carousel-product-image-hover {
  opacity: 1;
}

.button__carousel {
  text-align: center;
  width: 100%;
  margin-top: 42px;
}

